fix visibility of hyperlinks (#12)
* fix visibility of hyperlinks

* add an article in references

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -44,3 +44,21 @@ p, h1, h2, h3, h4, h5, h6, li, a, span {
   src: url('https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap');
   font-display: swap;
 }
+
+/* Make links visible with better contrast */
+a {
+  color: #0056b3;
+}
+
+a:hover {
+  color: #003d7a;
+}
+
+.navbar a:hover {
+  color: #1538cc;
+}
+
+/* If footer links are also invisible */
+.footer a {
+  color: white;
+}
